# kanban

./: .env  Cargo.toml
migrations/2023-08-23-083906_create_boards/: up.sql
migrations/2023-08-23-084508_create_cards/: up.sql
src/: db.rs  logger.rs  main.rs  models.rs
