[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
fern = "0.6.2"
log = "0.4.20"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
